# disclaude-gate

./: .env.example  LICENSE  README.md  install.sh  pyproject.toml
hooks/: disclaude_gate_hook.py  disclaude_gate_stop_hook.py
src/: server.py
